
// 0. Таблица-справочник для связи всех таблиц
Table student_registry {
  student_id serial [primary key]
  id_card varchar(20) [not null, unique]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// 1. Личные данные
Table student_personal_data {
  student_id int [primary key]
  last_name varchar(50) [not null]
  first_name varchar(50) [not null]
  middle_name varchar(50)
  birth_date date 
  gender char(1)
}

// 2. Районы
Table districts {
  district_id serial [primary key]
  district_name varchar(50) [not null, unique]
}

// 3. Адрес школьника
Table student_addresses {
  student_id int [primary key]
  district_id int [not null]
  street varchar(100)
  house varchar(20)
  apartment varchar(20)
}

// 4. Контакты родителей
Table parent_contacts {
  contact_id serial [primary key]
  student_id int [not null]
  parent_name varchar(100)
  phone varchar(20)
  email varchar(100)
  relationship varchar(30)
}

// 5. Социальный статус семьи
Table social_statuses {
    status_id serial [primary key]
    status_name varchar(100) [not null, unique]
}

// 6. Социальный статус ученика
Table student_social_status {
  student_id int [primary key]
  status_id int [not null]
}

// 7. Класс ученика
Table school_classes {
  class_id serial [primary key]
  class_name varchar(20) [not null, unique]
  class_teacher varchar(100)
}

// 8. Принадлежность ученика к классу
Table student_classes {
  student_id int [primary key]
  class_id int [not null]
  academic_year varchar(9)

  indexes {
    (student_id, academic_year) [pk]
  }
}

// 9. Успеваемость
Table academic_performance {
  performance_id serial [primary key]
  student_id int [not null]
  subject_name varchar(100)
  grade smallint
  quarter smallint
  academic_year varchar(9)
}

// Справочник турникетов
Table turnstiles {
  turnstile_id serial [primary key]
  location varchar(100)
}

// Журнал проходов
Table school_turnstile_logs {
  log_id bigserial [primary key]
  
  student_id int [not null]
  id_card varchar(20) [not null]
  timestamp timestamp [not null]

  turnstile_id int [not null]
  full_name varchar(200) [not null]
  district varchar(100)
  class_name varchar(20)
  social_status varchar(100)
}

// Для student_personal_date
Ref: student_personal_data.student_id > student_registry.student_id [delete: cascade]

// Для student_addresses
Ref: student_addresses.student_id > student_registry.student_id
Ref: student_addresses.district_id > districts.district_id

// Для parent_contacts
Ref: parent_contacts.student_id > student_registry.student_id [delete: cascade]

// Для student_social_status
Ref: student_social_status.student_id > student_registry.student_id
Ref: student_social_status.status_id > social_statuses.status_id 

// Для student_classes
Ref: student_classes.student_id > student_registry.student_id
Ref: student_classes.class_id > school_classes.class_id

// Для academic_performance
Ref: academic_performance.student_id > student_registry.student_id [delete: cascade]

// Для school_turnstile_logs
Ref: school_turnstile_logs.student_id > student_registry.student_id
Ref: school_turnstile_logs.turnstile_id > turnstiles.turnstile_id